# freight-pipeline

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DECISIONS.md  Dockerfile  LEARNING.md  PLAN.md  README.md  RECOVERY.md  THREAT_MODEL.md  cloud_deployment_zero_cost.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  fuel-surcharge.yml  poll-inbox.yml
eval/: llm.json  rates.json  results.json
scripts/: __init__.py  eval_corpus.py  eval_llm_latency.py  eval_rates.py  locustfile.py  qstash_sign.py  run_loadtest.sh
src/freight/: __init__.py  config.py  factories.py
supabase/: config.toml  seed.sql
supabase/migrations/: 20260611052708_core_enums_users_carriers.sql  20260611053443_deals_email_attachments.sql  20260611055522_rates_quotes.sql  20260611060539_audit_log.sql  (+10 more)
tests/: conftest.py  test_audit_append_only.py  test_auth_jwt.py  test_confidence.py  test_consumer.py  test_consumer_integration.py  test_containment.py  test_cors.py  test_cron_auth.py  test_demo.py  test_dlq_replay.py  test_eligibility.py  test_engine_singleton.py  test_eval.py  test_eval_rates.py  test_extraction_repo.py  test_factories.py  test_finalize.py  test_gmail_client.py  test_health.py  test_hf_client.py  test_ingest_repo.py  test_ingest_signature.py  test_interfaces.py  test_lanes.py  test_llm_guard.py  test_loadtest.py  test_logging.py  test_metrics.py  test_pdf_intake.py  test_pipeline.py  test_poll_route.py  test_poller.py  test_pricing.py  test_qstash_verifier.py  test_queue_dispatch.py  test_rate_cache.py  test_rate_engine.py  test_rate_limit.py  test_rate_lookup.py  (+12 more)
web/: .env.local.example  instrumentation.ts  next.config.mjs  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.tsbuildinfo
(+85 files in other folders)
