[project]
name = "freight-pipeline"
version = "0.0.0"
description = "Injection-aware, human-supervised logistics order-email pipeline."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0.50",
    "redis>=8.0.0",
    "httpx>=0.28.1",
    "google-auth>=2.53.0",
    "google-api-python-client>=2.197.0",
    "pypdf>=6.13.2",
    "pyjwt[crypto]>=2.13.0",
    "qstash>=3.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "psycopg[binary]>=3.3.4",
    "fpdf2>=2.8.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freight"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "N",   # pep8-naming
    "RUF", # ruff-specific
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

# google-api-python-client ships no type stubs.
[[tool.mypy.overrides]]
module = ["googleapiclient.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires the local supabase stack (DB reachable); skipped otherwise",
]
